# PlanetaryObservatory

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  imgui.ini  run_ll.sh
assets/shaders/: basic.frag  basic.vert  skybox.frag  skybox.vert
assets/textures/skybox/: space_back.ppm  space_bottom.ppm  space_front.ppm  space_left.ppm  space_right.ppm  space_top.ppm
cmake/: Dependencies.cmake  Warnings.cmake
src/: Axis.cpp  Axis.h  EOAxis.cpp  EOAxis.h  EOCamera.cpp  EOCamera.h  EOEarth.cpp  EOEarth.h  EOGL.h  EOGlobalEnums.h  EOGlobals.h  EOLight.cpp  EOLight.h  EOMoon.cpp  EOMoon.h  EOPlanetaryConstants.h  EOPlanetaryObject.cpp  EOPlanetaryObject.h  EOScene.cpp  EOScene.h  Earth.cpp  Earth.h  Light.cpp  Light.h  Moon.cpp  Moon.h  OrbitCamera.cpp  OrbitCamera.h  PlanetaryObject.cpp  PlanetaryObject.h  Scene.cpp  Scene.h  TextureLoader.cpp  TextureLoader.h  astromathlib.cpp  astromathlib.h  main.cpp
src/app/: main.cpp
src/common/: EOGL.h  EOGlobals.h
src/core/: Application.cpp  Application.h  Layer.h
src/layers/: SceneLayer.cpp  SceneLayer.h
src/math/: astromathlib.cpp  astromathlib.h  mathlib.cpp
src/render/: Axis.cpp  Axis.h  GlCapabilities.h  GlState.h  MeshBuilder.cpp  MeshBuilder.h  OrbitCamera.cpp  OrbitCamera.h  RenderContext.h  SceneRenderer.cpp  SceneRenderer.h  ShaderProgram.cpp  ShaderProgram.h  Skybox.cpp  Skybox.h  TextureCache.cpp  TextureCache.h  TextureLoader.cpp  TextureLoader.h  camera.cpp  camera.h
src/scene/: Earth.cpp  Earth.h  Light.cpp  Light.h  Moon.cpp  Moon.h  PlanetaryObject.cpp  PlanetaryObject.h  Scene.cpp  Scene.h
src/scenegraph/: SceneGraph.cpp  SceneGraph.h  SceneNode.cpp  SceneNode.h
src/scenegraph/components/: AxisComponent.cpp  AxisComponent.h  CameraComponent.cpp  CameraComponent.h  Component.h  DirectionalLightComponent.cpp  DirectionalLightComponent.h  GlobalLightingComponent.cpp  GlobalLightingComponent.h  MaterialComponent.cpp  MaterialComponent.h  SkyboxComponent.cpp  SkyboxComponent.h  SphereMeshComponent.cpp  SphereMeshComponent.h  TextureLayerComponent.cpp  TextureLayerComponent.h  TransformComponent.cpp  TransformComponent.h
src/utils/: Log.cpp  Log.h
tests/: CMakeLists.txt  smoke_test.cpp
